--- a/Analyzer1/Analyzer1.CodeFixes/CodeFixResources.resx
+++ b/Analyzer1/Analyzer1.CodeFixes/CodeFixResources.resx
@@ -117,16 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Usings should be moved to global file</value>
-    <comment>An optional longer localizable description of the diagnostic.</comment>
-  </data>
-  <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Move using {0} to {1}</value>
-    <comment>The format-able message the diagnostic displays.</comment>
-  </data>
-  <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Using should be in global file</value>
-    <comment>The title of the diagnostic.</comment>
+  <data name="CodeFixTitle" xml:space="preserve">
+    <value>Make uppercase</value>
+    <comment>The title of the code fix.</comment>
   </data>
 </root>
