--- a/Analyzer1/Analyzer1/Resources.resx
+++ b/Analyzer1/Analyzer1/Resources.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Usings should be moved to global file</value>
+    <value>Type names should be all uppercase.</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Move using {0} to {1}</value>
+    <value>Type name '{0}' contains lowercase letters</value>
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Using should be in global file</value>
+    <value>Type name contains lowercase letters</value>
     <comment>The title of the diagnostic.</comment>
   </data>
 </root>
